# KK2-Oracle_LLM

./: LICENSE  README.md  Reflection.md  main.py  pyproject.toml
app/: data.py  main.py  schemas.py
app/chain/: pipeline.py  runnable.py  steps.py
app/tests/: test_chain.py
dummy-data/: test1.csv
