[project]
name = "kk2-oracle-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "huggingface-hub>=1.17.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
